# hegel_AI

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_debate.py  run_vector_db.py
data/: passage.txt
data/sources/hegel/: [Hegel] Elements of Philosophy of Right.txt  [Hegel] Encyclopedia of the Philosophical Sciences (Part 1).txt  [Hegel] Introduction to the Philosophy of History.txt  [Hegel] Phenomenology of Spirit.txt  [Hegel] Science of Logic.txt
hegel_ai/: __init__.py  config.py  logging_config.py
hegel_ai/agents/: __init__.py  base.py  deconstructionist.py  hegelian.py  postcolonial.py  utilitarian.py
hegel_ai/debate/: __init__.py  models.py  moderator.py  orchestrator.py
hegel_ai/llm/: __init__.py  client.py  ollama_client.py
hegel_ai/prompts/: __init__.py  dialectical.py  refinement.py  tree_of_thought.py
hegel_ai/retrieval/: __init__.py  chunking.py  embeddings.py  metrics.py  vector_store.py
